--- a/services/MoneyManager/MoneyManager.Infrastructure/MoneyManager.Infrastructure.csproj
+++ b/services/MoneyManager/MoneyManager.Infrastructure/MoneyManager.Infrastructure.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.1.66" />
       <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.0-preview1.25120.4" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.0-preview.4.25258.110" />
       <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
     </ItemGroup>
 
