Fixed services structure

--- a/services/MoneyManager/MoneyManager.UnitTests/MoneyManager.UnitTests.csproj
+++ b/services/MoneyManager/MoneyManager.UnitTests/MoneyManager.UnitTests.csproj
@@ -26,9 +26,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\services\MoneyManager\MoneyManager.Application\MoneyManager.Application.csproj" />
-      <ProjectReference Include="..\services\MoneyManager\MoneyManager.Domain\MoneyManager.Domain.csproj" />
-      <ProjectReference Include="..\services\MoneyManager\UserService.Proto\UserService.Proto.csproj" />
+      <ProjectReference Include="..\MoneyManager.Application\MoneyManager.Application.csproj" />
     </ItemGroup>
 
 </Project>
