Added other grpc communication

--- a/services/UserService/UserService.API/appsettings.json
+++ b/services/UserService/UserService.API/appsettings.json
@@ -10,5 +10,8 @@
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=UserService;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
