--- a/services/UserService/UserService.Protos/UserService.Protos.csproj
+++ b/services/UserService/UserService.Protos/UserService.Protos.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <Protobuf Include="user.proto" GrpcServices="Server" />
+        <Protobuf Include="user_preferences.proto" GrpcServices="Server" />
     </ItemGroup>
 
 
