--- a/services/MoneyManager/MoneyManager.Domain/MoneyManager.Domain.csproj
+++ b/services/MoneyManager/MoneyManager.Domain/MoneyManager.Domain.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\UserService.Proto\UserService.Proto.csproj" />
+    </ItemGroup>
+
 </Project>
