--- a/services/MoneyManager/UserService.Proto/UserService.Proto.csproj
+++ b/services/MoneyManager/UserService.Proto/UserService.Proto.csproj
@@ -7,7 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Protobuf Include="UserService.proto" GrpcServices="Client" />
+        <Protobuf Include="user.proto" GrpcServices="Client" />
+        <Protobuf Include="user_preferences.proto" GrpcServices="Client" />
     </ItemGroup>
     
     <ItemGroup>
