Moved rabbitmq message broker to other project which can be used in both microservices

--- a/services/MoneyManager/MoneyManager.Domain/MoneyManager.Domain.csproj
+++ b/services/MoneyManager/MoneyManager.Domain/MoneyManager.Domain.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\MoneyManager.Messaging.RabbitMQ\MoneyManager.Messaging.RabbitMQ.csproj" />
       <ProjectReference Include="..\UserService.Proto\UserService.Proto.csproj" />
     </ItemGroup>
 
