--- a/services/UserService/UserService.API/UserService.API.csproj
+++ b/services/UserService/UserService.API/UserService.API.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Grpc.AspNetCore" Version="2.64.0"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.1" />
     </ItemGroup>
 
     <ItemGroup>
