--- a/services/UserService/UserService.Application/UserService.Application.csproj
+++ b/services/UserService/UserService.Application/UserService.Application.csproj
@@ -16,4 +16,9 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.12.1" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
+    </ItemGroup>
+
 </Project>
