--- a/services/MoneyManager/MoneyManager.API/MoneyManager.API.csproj
+++ b/services/MoneyManager/MoneyManager.API/MoneyManager.API.csproj
@@ -15,7 +15,9 @@
 
     <ItemGroup>
       <PackageReference Include="Grpc.Net.ClientFactory" Version="2.71.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.6" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
     </ItemGroup>
 
 </Project>
