--- a/services/MoneyManager/MoneyManager.Application/MoneyManager.Application.csproj
+++ b/services/MoneyManager/MoneyManager.Application/MoneyManager.Application.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Events\Events.csproj" />
       <ProjectReference Include="..\MoneyManager.Domain\MoneyManager.Domain.csproj" />
     </ItemGroup>
 
