Learning grpc communication with rabbitMq events

--- a/services/NotificationService/NotificationService.Domain/NotificationService.Domain.csproj
+++ b/services/NotificationService/NotificationService.Domain/NotificationService.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\ProtoContracts\ProtoContracts.csproj" />
+  </ItemGroup>
+
 </Project>
