--- a/services/MoneyManager.Messaging.RabbitMQ/MoneyManager.Messaging.RabbitMQ.csproj
+++ b/services/MoneyManager.Messaging.RabbitMQ/MoneyManager.Messaging.RabbitMQ.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Hosting.Abstractions">
+      <HintPath>..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\9.0.5\Microsoft.Extensions.Hosting.Abstractions.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
