--- a/services/UserService/UserService.API/UserService.API.csproj
+++ b/services/UserService/UserService.API/UserService.API.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\ProtoContracts\ProtoContracts.csproj" />
       <ProjectReference Include="..\UserService.Application\UserService.Application.csproj" />
       <ProjectReference Include="..\UserService.Infrastructure\UserService.Infrastructure.csproj" />
       <ProjectReference Include="..\UserService.Protos\UserService.Protos.csproj" />
